psdash/static/css/dashboard.css
/*
 * Base structure
 */

/* Move down content because we have a fixed navbar that is 50px tall */
body {
  padding-top: 50px;
}


/*
 * Global add-ons
 */

.sub-header {
    padding-bottom: 10px;
    border-bottom: 1px solid #eee;
}


/*
 * Sidebar
 */


.sidebar {
    position: fixed;
    top: 0;
    left: 0;
    bottom: 0;
    z-index: 1000;
    display: block;
    padding: 70px 20px 20px;
    background-color: #f5f5f5;
    border-right: 1px solid #eee;
}


/* Sidebar navigation */
.nav-sidebar {
  margin-left: -20px;
  margin-right: -21px; /* 20px padding + 1px border */
  margin-bottom: 20px;
}
.nav-sidebar > li > a {
  padding-left: 20px;
  padding-right: 20px;
  border-bottom: 1px solid #ddd;
}
.nav-sidebar > .active > a {
  color: #fff;
  background-color: #428bca;
}

.nav-sidebar > .active > a:hover {
    color: #000;
}


/*
 * Main content
 */

.main {
  padding: 20px;
}
@media (min-width: 768px) {
  .main {
    padding-left: 40px;
    padding-right: 40px;
  }
}
.main .page-header {
  margin-top: 0;
}


/*
 * Placeholder dashboard ideas
 */

.placeholders {
  margin-bottom: 30px;
  text-align: center;
}
.placeholders h4 {
  margin-bottom: 0;
}
.placeholder {
  margin-bottom: 20px;
}
.placeholder img {
  border-radius: 50%;
}

#process {
  margin-top: 20px;
}

#process .inline-table {
  margin-bottom: 0;
  width: 500px;
}

#process .inline-table td {
  min-width: 200px;
}

#processes td {
  font-size: 13px;
}

#processes th a {
  font-size: 12px;
  font-weight: normal;
  text-transform: uppercase;
}

#processes th .order-icon {
  font-size: 10px;
}

span.glyphicon {
    padding-right: 6px;
}

#overview td {
    padding: 4px 8px;
}

#psdash td {
  font-size: 13px;
}

#psdash th {
    text-transform: uppercase;
    font-weight: normal;
    font-size: 12px;
    padding: 4px 8px;
    border-bottom: 1px solid #ccc;
}

#overview td.label-col {
    text-transform: uppercase;
    font-size: 12px;
}

